esercizio day2 completato

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,17 @@
 	
 	<main>
 		
+		
+		
 		<div class="container">
+			
+			<form>
+				
+				<input type="text" id="searchbar" name="q" placeholder="search..." th:value="${q}">
+				
+				<input type="submit">
+				
+			</form>
 			
 			<h1 class="text-center">
 				Best of the pizzas 
