--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -3,7 +3,7 @@
 <head>
 <head th:replace="Frags :: head(${pizza.getNome()})" >
 </head>
-<body>
+<body data-bs-theme="dark">
 	
 	<div th:replace="Frags :: header()"></div>
 	
@@ -39,5 +39,5 @@
 					</div>
 				</div>
 
-</body>
+</bodydata-bs-theme="dark">
 </html>
