--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -57,6 +57,8 @@
 					</li>
 				</ul>
 				
+				<div class="col-auto" th:insert="Frags :: button('/pizza/create' , 'Create')" ></div>
+				
 			</div>
 			
 			
