fix incremento id

--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -39,7 +39,7 @@
 								Descrizione
 							</label>
 							
-							<input class="mb-2 form-control" type="text" id="descrizione" name="descrizione" placeholder="descrizione" th:field="*{descrizione}">
+							<textarea class="mb-2 form-control" id="descrizione" name="descrizione" placeholder="descrizione" th:field="*{descrizione}"></textarea>
 							
 						</div>
 						
