--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head th:replace="Frags :: head('PizzaCreate')" >
+<head th:replace="Frags :: head(${title})" >
 	
 </head>
 <body data-bs-theme="dark">
@@ -14,7 +14,14 @@
 			
 			<div class="card col-6 text-center">
 				
-				<h3 class="card-title" >create a new pizza</h3>
+				<h3 class="card-title" >[[${title}]] 
+					
+				<span th:if="${pizza.nome}==null"> a New Pizza </span>
+				
+				<span th:if="${pizza.nome}!=null">[[${pizza.nome}]]</span>
+				
+				</h3> 
+				
 				
 				<div ass="card-body row justify-content-center">
 					
@@ -67,7 +74,7 @@
 						
 						<div class=" mb-4 row justify-content-evenly">
 							
-							<input class="btn btn-success col-auto" type="submit">
+							<input class="btn btn-success col-auto" type="submit" th:value="${title}">
 							
 							<input class="btn btn-warning col-auto" type="reset">
 							
