--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -44,18 +44,31 @@
 						
 						<img class="img-fluid col-3" th:src="@{${pizza.getFotoUrl()}}">
 						
-						<div class="col-1" >id: [[${pizza.getId()}]]</div>
+						<div class="col" >id: [[${pizza.getId()}]]</div>
 						
-						<div class="col-2" >nome: [[${pizza.getNome()}]]</div>
+						<div class="col" >nome: [[${pizza.getNome()}]]</div>
 						
-						<div class="col-3"> [[${pizza.getDescrizione()}]] </div>
+						<div class="col"> [[${pizza.getDescrizione()}]] </div>
 						
-						<div class="col-1" >[[${pizza.getPrezzo()}]] €</div>
+						<div class="col" >[[${pizza.getPrezzo()}]] €</div>
 						
-						<div class="col-2" th:insert="Frags :: button('/pizza/'+ ${pizza.getId()} , 'show')" ></div>
+						<div class="col" th:insert="Frags :: button('/pizza/'+ ${pizza.getId()} , 'show')" ></div>
+						
+						<div class="col" th:insert="Frags :: button('/pizza/edit/'+ ${pizza.getId()} , 'edit')" ></div>
+						
+						<form class="col" method="POST" th:action="@{'/pizza/delete/{id}'  (id=${pizza.id})}">
+							
+							<input class="btn btn-danger" type="submit" value="delete">
+							
+						</form>
+						
+						
 						
 					</li>
+					
 				</ul>
+
+				<div th:if="${deletedPizza != null} " class="alert alert-danger">[[${deletedPizza.nome}]] have been deleted successfully! </div>
 				
 				<div class="col-auto" th:insert="Frags :: button('/pizza/create' , 'Create')" ></div>
 				
